Update day6 graph ranking & sequential labeling

--- a/day4_embedding_and_visualizing/day4_4_fasttext_gensim.ipynb
+++ b/day4_embedding_and_visualizing/day4_4_fasttext_gensim.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,39 +183,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/gensim/matutils.py:737: FutureWarning: Conversion of the second argument of issubdtype from `int` to `np.signedinteger` is deprecated. In future, it will be treated as `np.int64 == np.dtype(int).type`.\n",
-      "  if np.issubdtype(vec.dtype, np.int):\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[('영활', 0.9843769073486328),\n",
-       " ('영환', 0.9834325313568115),\n",
-       " ('영화표', 0.9814302921295166),\n",
-       " ('영화평', 0.9701882600784302),\n",
-       " ('영화판', 0.9635607600212097),\n",
-       " ('영화비', 0.9625624418258667),\n",
-       " ('영화처럼', 0.9606270790100098),\n",
-       " ('영화화', 0.960281491279602),\n",
-       " ('영화계', 0.956253170967102),\n",
-       " ('영화죠', 0.9556575417518616)]"
+       "[('재미있엇다', 0.9712421894073486),\n",
+       " ('재밌다', 0.9677714705467224),\n",
+       " ('재미있겠다', 0.9657906293869019),\n",
+       " ('재미있었다', 0.9524913430213928),\n",
+       " ('재밌겠다', 0.9505969285964966),\n",
+       " ('재밌었다', 0.9446882605552673),\n",
+       " ('재밋었다', 0.9390435218811035),\n",
+       " ('재미잇엇다', 0.9227269887924194),\n",
+       " ('재밋다', 0.9225164651870728),\n",
+       " ('재미잇다', 0.9217596054077148)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "most_similar('영홯')"
+    "most_similar('재미있다')"
    ]
   },
   {
