--- a/day6_graph_ranking/day6_0_text_to_graph_utils.ipynb
+++ b/day6_graph_ranking/day6_0_text_to_graph_utils.ipynb
@@ -70,7 +70,7 @@
     "idx_to_vocab, vocab_to_idx, idx_to_count = scan_vocabulary(\n",
     "    sents, tokenizer, min_count = 1)\n",
     "\n",
-    "C = adjacent_cooccurrence_graph(sents, tokenizer, vocab_to_idx)\n",
+    "C = adjacent_cooccurrence_graph(sents, tokenizer, vocab_to_idx, window=1)\n",
     "\n",
     "X = c_to_x(C, vocab_to_idx)\n",
     "\n",
@@ -116,7 +116,7 @@
     "from graphutils import sents_to_adjacent_graph\n",
     "\n",
     "X, idx_to_vocab = sents_to_adjacent_graph(\n",
-    "    sents, tokenizer, min_count=1, verbose=True)\n",
+    "    sents, tokenizer, min_count=1, window=1, verbose=True)\n",
     "\n",
     "X.shape"
    ]
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
+      "soynlp=0.0.493\n",
       "added lovit_textmining_dataset\n"
      ]
     },
