--- a/day6_graph_ranking/day6_1_pagerank_and_textrank.ipynb
+++ b/day6_graph_ranking/day6_1_pagerank_and_textrank.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
+      "soynlp=0.0.493\n",
       "added lovit_textmining_dataset\n"
      ]
     },
@@ -73,7 +73,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\r",
+      "construct adjacent graph 0 / 10000\r",
+      "construct adjacent graph 100 / 10000\r",
+      "construct adjacent graph 200 / 10000\r",
+      "construct adjacent graph 300 / 10000\r",
+      "construct adjacent graph 400 / 10000\r",
+      "construct adjacent graph 500 / 10000\r",
+      "construct adjacent graph 600 / 10000\r",
+      "construct adjacent graph 700 / 10000\r",
+      "construct adjacent graph 800 / 10000\r",
+      "construct adjacent graph 900 / 10000\r",
+      "construct adjacent graph 1000 / 10000\r",
+      "construct adjacent graph 1100 / 10000\r",
+      "construct adjacent graph 1200 / 10000\r",
+      "construct adjacent graph 1300 / 10000\r",
+      "construct adjacent graph 1400 / 10000\r",
+      "construct adjacent graph 1500 / 10000\r",
+      "construct adjacent graph 1600 / 10000\r",
+      "construct adjacent graph 1700 / 10000\r",
+      "construct adjacent graph 1800 / 10000\r",
+      "construct adjacent graph 1900 / 10000\r",
+      "construct adjacent graph 2000 / 10000\r",
+      "construct adjacent graph 2100 / 10000\r",
+      "construct adjacent graph 2200 / 10000\r",
+      "construct adjacent graph 2300 / 10000\r",
+      "construct adjacent graph 2400 / 10000\r",
+      "construct adjacent graph 2500 / 10000\r",
+      "construct adjacent graph 2600 / 10000\r",
+      "construct adjacent graph 2700 / 10000\r",
+      "construct adjacent graph 2800 / 10000\r",
+      "construct adjacent graph 2900 / 10000\r",
+      "construct adjacent graph 3000 / 10000\r",
+      "construct adjacent graph 3100 / 10000\r",
+      "construct adjacent graph 3200 / 10000\r",
+      "construct adjacent graph 3300 / 10000\r",
+      "construct adjacent graph 3400 / 10000\r",
+      "construct adjacent graph 3500 / 10000\r",
+      "construct adjacent graph 3600 / 10000\r",
+      "construct adjacent graph 3700 / 10000\r",
+      "construct adjacent graph 3800 / 10000\r",
+      "construct adjacent graph 3900 / 10000\r",
+      "construct adjacent graph 4000 / 10000\r",
+      "construct adjacent graph 4100 / 10000\r",
+      "construct adjacent graph 4200 / 10000\r",
+      "construct adjacent graph 4300 / 10000\r",
+      "construct adjacent graph 4400 / 10000\r",
+      "construct adjacent graph 4500 / 10000\r",
+      "construct adjacent graph 4600 / 10000\r",
+      "construct adjacent graph 4700 / 10000\r",
+      "construct adjacent graph 4800 / 10000\r",
+      "construct adjacent graph 4900 / 10000\r",
+      "construct adjacent graph 5000 / 10000\r",
+      "construct adjacent graph 5100 / 10000\r",
+      "construct adjacent graph 5200 / 10000\r",
+      "construct adjacent graph 5300 / 10000\r",
+      "construct adjacent graph 5400 / 10000\r",
+      "construct adjacent graph 5500 / 10000\r",
+      "construct adjacent graph 5600 / 10000\r",
+      "construct adjacent graph 5700 / 10000\r",
+      "construct adjacent graph 5800 / 10000\r",
+      "construct adjacent graph 5900 / 10000\r",
+      "construct adjacent graph 6000 / 10000\r",
+      "construct adjacent graph 6100 / 10000\r",
+      "construct adjacent graph 6200 / 10000\r",
+      "construct adjacent graph 6300 / 10000\r",
+      "construct adjacent graph 6400 / 10000\r",
+      "construct adjacent graph 6500 / 10000\r",
+      "construct adjacent graph 6600 / 10000\r",
+      "construct adjacent graph 6700 / 10000\r",
+      "construct adjacent graph 6800 / 10000\r",
+      "construct adjacent graph 6900 / 10000\r",
+      "construct adjacent graph 7000 / 10000\r",
+      "construct adjacent graph 7100 / 10000\r",
+      "construct adjacent graph 7200 / 10000\r",
+      "construct adjacent graph 7300 / 10000\r",
+      "construct adjacent graph 7400 / 10000\r",
+      "construct adjacent graph 7500 / 10000\r",
+      "construct adjacent graph 7600 / 10000\r",
+      "construct adjacent graph 7700 / 10000\r",
+      "construct adjacent graph 7800 / 10000\r",
+      "construct adjacent graph 7900 / 10000\r",
+      "construct adjacent graph 8000 / 10000\r",
+      "construct adjacent graph 8100 / 10000\r",
+      "construct adjacent graph 8200 / 10000\r",
+      "construct adjacent graph 8300 / 10000\r",
+      "construct adjacent graph 8400 / 10000\r",
+      "construct adjacent graph 8500 / 10000\r",
+      "construct adjacent graph 8600 / 10000\r",
+      "construct adjacent graph 8700 / 10000\r",
+      "construct adjacent graph 8800 / 10000\r",
+      "construct adjacent graph 8900 / 10000\r",
+      "construct adjacent graph 9000 / 10000\r",
+      "construct adjacent graph 9100 / 10000\r",
+      "construct adjacent graph 9200 / 10000\r",
+      "construct adjacent graph 9300 / 10000\r",
+      "construct adjacent graph 9400 / 10000\r",
+      "construct adjacent graph 9500 / 10000\r",
+      "construct adjacent graph 9600 / 10000\r",
+      "construct adjacent graph 9700 / 10000\r",
+      "construct adjacent graph 9800 / 10000\r",
+      "construct adjacent graph 9900 / 10000\r",
       "construct adjacent graph was done                    \n",
+      "\r",
+      "transforming dict to sparse 0 / 3430\r",
+      "transforming dict to sparse 1000 / 3430\r",
+      "transforming dict to sparse 2000 / 3430\r",
+      "transforming dict to sparse 3000 / 3430\r",
       "transforming dict to sparse was done                    \n",
       "(3430, 3430)\n",
       "(18816,)\n"
@@ -294,6 +400,20 @@
     "        print('\\n| ', end='')\n",
     "    print('{:6}'.format(vocab, rank), end=' | ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
