--- a/day6_graph_ranking/day6_5_simrank_and_rwr.ipynb
+++ b/day6_graph_ranking/day6_5_simrank_and_rwr.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
+      "soynlp=0.0.493\n",
       "added lovit_textmining_dataset\n"
      ]
     }
@@ -127,8 +127,8 @@
       "방탄소년단\n",
       "형은\n",
       "파워풀\n",
-      "CPU times: user 72 ms, sys: 0 ns, total: 72 ms\n",
-      "Wall time: 66.9 ms\n"
+      "CPU times: user 56 ms, sys: 0 ns, total: 56 ms\n",
+      "Wall time: 56.4 ms\n"
      ]
     }
    ],
@@ -254,8 +254,8 @@
       "불독\n",
       "키미\n",
       "음악방송\n",
-      "CPU times: user 15.3 s, sys: 4 ms, total: 15.3 s\n",
-      "Wall time: 15.3 s\n"
+      "CPU times: user 14.5 s, sys: 0 ns, total: 14.5 s\n",
+      "Wall time: 14.5 s\n"
      ]
     }
    ],
