--- a/day8_cnn/day_8_lenet_mnist.ipynb
+++ b/day8_cnn/day_8_lenet_mnist.ipynb
@@ -17,7 +17,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torch.optim as optmi\n",
+    "import torch.optim as optim\n",
     "from torch.utils.data import Dataset\n",
     "\n",
     "print(torch.__version__)"
