Check day01 from text to vector

--- a/day01_from_text_to_vector/day1_KoNLPy.ipynb
+++ b/day01_from_text_to_vector/day1_KoNLPy.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5.1\n"
+      "0.5.2\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
     "taggers = [kkma, okt, komoran]\n",
     "names = 'kkma twitter komoran'.split()\n",
     "for name, tagger in zip(names, taggers):\n",
-    "    print('{}: {}'.format(name, tagger.pos(sent, join=True)))"
+    "    print(f'{name}: {tagger.pos(sent, join=True)}')"
    ]
   },
   {
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 4 ms, total: 4 ms\n",
+      "CPU times: user 4 ms, sys: 4 ms, total: 8 ms\n",
       "Wall time: 1.68 ms\n"
      ]
     },
@@ -294,9 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kkma    : 0.981 secs\n",
-      "twitter : 0.305 secs\n",
-      "komoran : 0.079 secs\n"
+      "kkma    : 1.04 secs\n",
+      "twitter : 0.317 secs\n",
+      "komoran : 0.0823 secs\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
     "    for sent in sents:\n",
     "        tagger.pos(sent)\n",
     "    t = time.time() - t\n",
-    "    print('{:8}: {:.3f} secs'.format(name, t))"
+    "    print(f'{name:8}: {t:.3} secs')"
    ]
   },
   {
@@ -386,9 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
