--- a/day01_from_text_to_vector/day1_load_dataset_with_soynlp.ipynb
+++ b/day01_from_text_to_vector/day1_load_dataset_with_soynlp.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import config\n",
-    "\n",
-    "from navernews_10days import get_news_paths, get_news_index_paths\n",
-    "from navernews_10days import get_comments_paths, get_comments_index_paths"
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_index_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_comments_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_comments_index_paths"
    ]
   },
   {
@@ -99,6 +99,84 @@
     "corpus.iter_sent = False\n",
     "for i, doc in enumerate(corpus):\n",
     "    print('doc{}: {}'.format(i, doc[:100].strip()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['001\\t2016-10-20\\t0008765175\\t104\\t2016-10-20 00:00',\n",
+       " '001\\t2016-10-20\\t0008765177\\t104\\t2016-10-20 00:03',\n",
+       " '001\\t2016-10-20\\t0008765178\\t102\\t2016-10-20 07:53',\n",
+       " '001\\t2016-10-20\\t0008765179\\t104\\t2016-10-20 00:19',\n",
+       " '001\\t2016-10-20\\t0008765180\\t104\\t2016-10-20 00:20']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index_path = get_news_index_paths(date='2016-10-20')\n",
+    "index = DoublespaceLineCorpus(index_path, num_doc=5)\n",
+    "list(index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['한국고유의情이란게있다 각박해지는세상 섭외해서하는것도아니고 리얼도그렇고 프로그램취지가 너무마음에드는데 재미도있었음 잘하면 착하고웃음주예능될것같다 응원하겠습니다',\n",
+       " '한때 유재석과 쌍벽을 나눈 엠씨 였다가 세금탈루 때문에 저리  인지도가 떨어지는 강호동!!!!!!!!안타깝다..  의원출마까지도  생각했을 터일텐데.',\n",
+       " '진심 대박나길 바랍니다아아아',\n",
+       " '현실감속에서  재밋게 봤습니다 ㅡㅡ대박나세요  신선함도 !!!',\n",
+       " '꿀잼ㅋㅋㅋ 뭔가 짠하면서 재밌네요']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comment_path = get_comments_paths(date='2016-10-20')\n",
+    "comment = DoublespaceLineCorpus(comment_path, num_doc=5)\n",
+    "list(comment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2016-10-20\\t112\\t0002858604\\t712619182\\t1\\t0',\n",
+       " '2016-10-20\\t112\\t0002858604\\t712605402\\t0\\t0',\n",
+       " '2016-10-20\\t112\\t0002858604\\t712604832\\t1\\t0',\n",
+       " '2016-10-20\\t112\\t0002858604\\t712497112\\t9\\t0',\n",
+       " '2016-10-20\\t112\\t0002858604\\t712493012\\t12\\t0']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comment_index_path = get_comments_index_paths(date='2016-10-20')\n",
+    "comment_index = DoublespaceLineCorpus(comment_index_path, num_doc=5)\n",
+    "list(comment_index)"
    ]
   },
   {
