--- a/day01_from_text_to_vector/day1_from_text_to_sparse_matrix.ipynb
+++ b/day01_from_text_to_vector/day1_from_text_to_sparse_matrix.ipynb
@@ -11,9 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "scikit-learn (sklearn) 은 다양한 머신러닝 알고리즘 및 데이터 처리 모듈들을 가지고 있는 툴킷입니다. sklearn 의 CountVectorizer 를 이용하여 term frequency matrix 를 만드는 법을 연습합니다. \n",
-    "\n",
-    "이를 위해서 작은 영화 데이터셋을 이용합니다. sys.path 는 각 Ipython notebook 파일마다 추가해야 합니다. 항상 sys.path.append 하는 것이 번거롭다면 [링크](https://wikidocs.net/29)의 내용을 참고하세요."
+    "scikit-learn (sklearn) 은 다양한 머신러닝 알고리즘 및 데이터 처리 모듈들을 가지고 있는 툴킷입니다. sklearn 의 CountVectorizer 를 이용하여 term frequency matrix 를 만드는 법을 연습합니다. 이를 위해서 작은 영화 데이터셋을 이용합니다."
    ]
   },
   {
@@ -22,7 +20,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import config\n",
     "from lovit_textmining_dataset.navermovie_comments import load_movie_comments\n",
     "\n",
     "idxs, texts, rates = load_movie_comments(large=False, tokenize=None, num_doc=1000)"
@@ -429,28 +426,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "vectorizer 는 pickling 으로 저장하여도 좋습니다. vocabulary list 는 따로 list 파일로 저장해도 좋습니다. "
+    "vectorizer 는 pickling 으로 저장하여도 좋습니다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "with open('./tmp/vectorizer.pkl', 'wb') as f:\n",
-    "    pickle.dump(vectorizer, f)\n",
-    "\n",
-    "with open('./tmp/vocabulary.txt', 'w', encoding='utf-8') as f:\n",
-    "    for vocab in int2vocab:\n",
-    "        f.write('%s\\n' % vocab)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -462,10 +443,59 @@
     }
    ],
    "source": [
+    "import pickle\n",
+    "\n",
+    "with open('./tmp/vectorizer.pkl', 'wb') as f:\n",
+    "    pickle.dump(vectorizer, f)\n",
+    "\n",
     "with open('./tmp/vectorizer.pkl', 'rb') as f:\n",
     "    loaded_vectorizer = pickle.load(f)\n",
     "\n",
     "print(loaded_vectorizer.vocabulary_['영화'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-learn 에서는 `pickle` 보다 `joblib` 을 이용하여 모델을 저장하는 것을 권장하고 있습니다. scikit-learn <= 0.22 에서는 아래처럼 joblib 을 이용하길 권장하였습니다.\n",
+    "\n",
+    "```python\n",
+    "from sklearn.external import joblib\n",
+    "```\n",
+    "\n",
+    "하지만 scikit-learn >= 0.24 부터는 독립적으로 `joblib` 을 이용해야 합니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "115"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import load, dump\n",
+    "\n",
+    "dump(vectorizer, './tmp/vectorizer.joblib')\n",
+    "loaded_vectorizer = load('./tmp/vectorizer.joblib')\n",
+    "loaded_vectorizer.vocabulary_['영화']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이후 데이터 분석 과정에서 bag of words matrix 와 vocabulary list 만을 이용할 경우들이 많습니다."
    ]
   },
   {
@@ -486,6 +516,10 @@
     }
    ],
    "source": [
+    "with open('./tmp/vocabulary.txt', 'w', encoding='utf-8') as f:\n",
+    "    for vocab in int2vocab:\n",
+    "        f.write('%s\\n' % vocab)\n",
+    "\n",
     "with open('./tmp/vocabulary.txt', encoding='utf-8') as f:\n",
     "    for _ in range(5):\n",
     "        print(next(f).strip())"
