--- a/day01_from_text_to_vector/day1_soynlp_word_noun_tokenizer.ipynb
+++ b/day01_from_text_to_vector/day1_soynlp_word_noun_tokenizer.ipynb
@@ -18,12 +18,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0.491\n"
+      "0.0.493\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
     "import soynlp\n",
     "print(soynlp.__version__)"
    ]
@@ -42,7 +41,7 @@
    "outputs": [],
    "source": [
     "from soynlp.utils import DoublespaceLineCorpus\n",
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "\n",
     "corpus_path = get_news_paths(date='2016-10-20')\n",
     "corpus = DoublespaceLineCorpus(corpus_path, iter_sent=True)"
@@ -71,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training was done. used memory 0.746 Gbse memory 0.787 Gb\n"
+      "training was done. used memory 0.741 Gbse memory 0.794 Gb\n"
      ]
     }
    ],
@@ -269,19 +268,19 @@
      "output_type": "stream",
      "text": [
       "[Noun Extractor] use default predictors\n",
-      "[Noun Extractor] num features: pos=1260, neg=1173, common=12\n",
+      "[Noun Extractor] num features: pos=3929, neg=2321, common=107\n",
       "[Noun Extractor] counting eojeols\n",
-      "[EojeolCounter] n eojeol = 403896 from 223357 sents. mem=0.933 Gb                    \n",
+      "[EojeolCounter] n eojeol = 403896 from 223357 sents. mem=0.932 Gb                    \n",
       "[Noun Extractor] complete eojeol counter -> lr graph\n",
-      "[Noun Extractor] has been trained. #eojeols=4434442, mem=1.588 Gb\n",
-      "[Noun Extractor] batch prediction was completed for 146445 words\n",
-      "[Noun Extractor] checked compounds. discovered 69793 compounds\n",
-      "[Noun Extractor] postprocessing detaching_features : 33902 -> 33781\n",
-      "[Noun Extractor] postprocessing ignore_features : 33781 -> 33686\n",
-      "[Noun Extractor] postprocessing ignore_NJ : 33686 -> 33398\n",
-      "[Noun Extractor] 33398 nouns (69793 compounds) with min frequency=5\n",
-      "[Noun Extractor] flushing was done. mem=1.777 Gb                    \n",
-      "[Noun Extractor] 79.60 % eojeols are covered\n"
+      "[Noun Extractor] has been trained. #eojeols=4434442, mem=1.571 Gb\n",
+      "[Noun Extractor] batch prediction was completed for 119705 words\n",
+      "[Noun Extractor] checked compounds. discovered 70639 compounds\n",
+      "[Noun Extractor] postprocessing detaching_features : 32506 -> 32351\n",
+      "[Noun Extractor] postprocessing ignore_features : 32351 -> 32167\n",
+      "[Noun Extractor] postprocessing ignore_NJ : 32167 -> 31921\n",
+      "[Noun Extractor] 31921 nouns (70639 compounds) with min frequency=5\n",
+      "[Noun Extractor] flushing was done. mem=1.778 Gb                    \n",
+      "[Noun Extractor] 76.04 % eojeols are covered\n"
      ]
     }
    ],
@@ -304,11 +303,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "정부: NounScore(frequency=4008, score=0.9993337774816788)\n",
+      "정부: NounScore(frequency=3251, score=0.9893238434163701)\n",
       "정부의: \n",
-      "알아: \n",
+      "알아: NounScore(frequency=104, score=0.32786885245901637)\n",
       "알아냈: \n",
-      "트와이스: NounScore(frequency=655, score=1.0)\n",
+      "트와이스: NounScore(frequency=654, score=0.992831541218638)\n",
       "아이디: NounScore(frequency=100, score=1.0)\n",
       "아이디어: NounScore(frequency=251, score=1.0)\n",
       "아이오아이: NounScore(frequency=250, score=1.0)\n"
@@ -479,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +487,7 @@
        "'아니ㅋㅋㅠㅠ이럴수가흐규흐규'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
