Update day2 clustering and word analysis

--- a/day02_word_analysis/day2_0_proportion_ratio_keyword.ipynb
+++ b/day02_word_analysis/day2_0_proportion_ratio_keyword.ipynb
@@ -29,15 +29,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
+      "lovit_textmining_dataset==0.1.0\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_bow\n",
+    "import lovit_textmining_dataset\n",
+    "from lovit_textmining_dataset.navernews_10days import get_bow\n",
     "\n",
+    "print(f'lovit_textmining_dataset=={lovit_textmining_dataset.__version__}')\n",
     "x, _idx_to_vocab, _vocab_to_idx = get_bow(tokenize='noun', date='2016-10-20')"
    ]
   },
