--- a/day02_word_analysis/day2_1_customized_ngram.ipynb
+++ b/day02_word_analysis/day2_1_customized_ngram.ipynb
@@ -18,16 +18,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n"
+      "lovit_textmining_dataset==0.1.0\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
-    "\n",
-    "from navernews_10days import get_news_paths\n",
+    "import lovit_textmining_dataset\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
+    "\n",
+    "print(f'lovit_textmining_dataset=={lovit_textmining_dataset.__version__}')\n",
     "\n",
     "path = get_news_paths(tokenize='komoran', date='2016-10-20')\n",
     "corpus = DoublespaceLineCorpus(path, iter_sent=True, num_sent=1000)"
