--- a/day02_word_analysis/day2_2_keyword_extraction_using_lasso_regression.ipynb
+++ b/day02_word_analysis/day2_2_keyword_extraction_using_lasso_regression.ipynb
@@ -16,14 +16,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n"
+      "lovit_textmining_dataset==0.1.0\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
-    "from navernews_10days import get_bow\n",
+    "import lovit_textmining_dataset\n",
+    "from lovit_textmining_dataset.navernews_10days import get_bow\n",
+    "\n",
+    "print(f'lovit_textmining_dataset=={lovit_textmining_dataset.__version__}')\n",
     "\n",
     "x, _idx_to_vocab, _vocab_to_idx = get_bow(tokenize='noun', date='2016-10-20')"
    ]
@@ -251,7 +252,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
       "  FutureWarning)\n"
      ]
     },
@@ -259,9 +260,10 @@
      "data": {
       "text/plain": [
        "LogisticRegression(C=10, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
-       "          n_jobs=None, penalty='l1', random_state=None, solver='warn',\n",
-       "          tol=0.0001, verbose=0, warm_start=False)"
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l1',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
       ]
      },
      "execution_count": 8,
@@ -307,15 +309,15 @@
       "침몰\n",
       "편파기소\n",
       "원점\n",
-      "모색\n",
       "융성\n",
+      "모색\n",
       "씨와\n",
       "꼬리\n",
       "정면\n",
       "지지부진\n",
       "거의\n",
       "지목\n",
-      "김세\n"
+      "정국\n"
      ]
     }
    ],
@@ -344,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['게이트', '고영태', '최서원', '조회', '정유라', '역전', '원점', '일이다', '모녀', '융성', '침몰', '꼬리', '편파기소', '모색', '씨와', '정면', '화두', '거의', '김세', '정국', '지목', '지지부진', '불신', '가치', '제3지대', '문제없', '운명', '집권', '학사관리', '일고', '이화여대', '일을', '뉴스', '미르', '최동', '나라', '어렵게', '한겨레', '민생', '파악', '커지고', '침묵', '노컷뉴스', '블루', '정유라씨', '승마', '연관성', '지도부', '송민순', '미르재단']\n"
+      "['게이트', '고영태', '최서원', '조회', '정유라', '역전', '원점', '일이다', '모녀', '침몰', '꼬리', '모색', '융성', '편파기소', '씨와', '정면', '거의', '화두', '지목', '김세', '불신', '정국', '지지부진', '가치', '제3지대', '문제없', '운명', '집권', '학사관리', '일고', '이화여대', '미르', '뉴스', '일을', '최동', '나라', '한겨레', '민생', '파악', '어렵게', '커지고', '침묵', '노컷뉴스', '블루', '승마', '정유라씨', '지도부', '연관성', '송민순', '미르재단']\n"
      ]
     }
    ],
@@ -387,7 +389,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['너무너무너무', '산들', '선의', '엠카운트다운', '다비치', '손을', '선보', '열창', '뮤직', '사랑스', '만나게', '박진영', '세련', '먹고', '사나', '챔피언', '소속사', '파워풀', '같이', '마무리', '보컬', '곡으로', '당연', '버전', '뉴스1스타', '컴백', '일산동구', '걸크러쉬', '유연', '일산', '인사', '순위', '완전체', '1위', '부모님', '소식', '서울신문', '등장', '인기', '멤버들', '91', '무대', '발매', '유정', '활동', '수준', '헤럴드', '수출', '감사', '프로듀스101']\n"
+      "['너무너무너무', '산들', '선의', '엠카운트다운', '손을', '다비치', '선보', '뮤직', '열창', '사랑스', '만나게', '박진영', '세련', '챔피언', '먹고', '사나', '소속사', '같이', '파워풀', '당연', '보컬', '마무리', '곡으로', '컴백', '걸크러쉬', '버전', '유연', '인사', '뉴스1스타', '337', '1위', '순위', '완전체', '소식', '등장', '일산', '인기', '서울신문', '무대', '멤버들', '부모님', '발매', '활동', '유정', '고양시', '수준', '수출', '헤럴드', '드림', '프로듀스101']\n"
      ]
     }
    ],
@@ -404,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['너무너무너무', '엠카운트다운', '활동', '무대', '1위', '걸그룹', '불독', '다이아', '컴백', '방탄소년단', '타이틀곡', '프로듀스101', '순위', '신용재']\n"
+      "['너무너무너무', '엠카운트다운', '활동', '무대', '1위', '불독', '걸그룹', '다이아', '컴백', '방탄소년단', '타이틀곡', '프로듀스101', '순위', '신용재']\n"
      ]
     }
    ],
@@ -427,9 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
