--- a/day02_document_clustering/day2_1_doc2vec_clustering_(movie_clustering).ipynb
+++ b/day02_document_clustering/day2_1_doc2vec_clustering_(movie_clustering).ipynb
@@ -16,20 +16,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.493\n",
-      "added lovit_textmining_dataset\n",
-      "Gensim version = 3.6.0\n"
+      "lovit_textmining_dataset==0.1.0\n",
+      "Gensim version = 3.8.1\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
-    "import gensim\n",
-    "from navermovie_comments import load_trained_embedding\n",
-    "from navermovie_comments import load_id_to_movie\n",
+    "import lovit_textmining_dataset\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_trained_embedding\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_id_to_movie\n",
     "import warnings\n",
+    "import gensim\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
+    "print(f'lovit_textmining_dataset=={lovit_textmining_dataset.__version__}')\n",
     "print('Gensim version = {}'.format(gensim.__version__))"
    ]
   },
@@ -140,15 +140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 128 ms, sys: 4 ms, total: 132 ms\n",
-      "Wall time: 86.6 ms\n"
+      "CPU times: user 84 ms, sys: 156 ms, total: 240 ms\n",
+      "Wall time: 23.6 ms\n"
      ]
     }
    ],
@@ -157,29 +157,29 @@
     "\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "kmeans = KMeans(n_clusters=10, max_iter=10, n_init=1, verbose=0)\n",
+    "kmeans = KMeans(n_clusters=10, max_iter=10, n_init=1, verbose=0, random_state=0)\n",
     "clusters = kmeans.fit_predict(movie_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([6, 6, 2, 7, 0, 7, 2, 6, 5, 7, 6, 2, 8, 2, 8, 2, 6, 4, 1, 8, 7, 7,\n",
-       "       3, 1, 7, 3, 2, 6, 0, 7, 0, 1, 1, 9, 7, 2, 9, 0, 6, 3, 6, 6, 5, 9,\n",
-       "       8, 6, 2, 4, 5, 3, 5, 3, 5, 2, 3, 8, 2, 7, 8, 7, 3, 6, 9, 1, 6, 5,\n",
-       "       8, 0, 1, 7, 5, 2, 0, 7, 6, 5, 9, 8, 8, 4, 7, 2, 4, 6, 9, 1, 6, 6,\n",
-       "       1, 6, 0, 6, 9, 0, 0, 2, 0, 7, 8, 9, 8, 0, 8, 6, 1, 5, 7, 8, 7, 5,\n",
-       "       6, 3, 3, 5, 1, 8, 2, 7, 7, 5, 7, 5, 1, 5, 7, 5, 7, 8, 3, 6, 3, 0,\n",
-       "       0, 7, 8, 2, 8, 7, 5, 9, 0, 5, 2, 6, 0, 7, 6, 1, 2, 3, 2, 8, 7, 3,\n",
-       "       6, 8, 6, 7, 1, 6, 5, 5, 8, 5, 4, 4, 8, 7, 8, 2, 4, 1], dtype=int32)"
+       "array([7, 7, 4, 3, 9, 1, 4, 4, 2, 3, 7, 4, 5, 4, 0, 4, 7, 0, 5, 0, 1, 1,\n",
+       "       3, 6, 8, 3, 4, 4, 9, 8, 9, 5, 1, 6, 1, 4, 6, 9, 7, 3, 4, 7, 7, 6,\n",
+       "       0, 4, 8, 0, 2, 8, 5, 8, 5, 4, 8, 0, 4, 1, 0, 8, 3, 7, 6, 1, 4, 5,\n",
+       "       0, 9, 1, 8, 2, 4, 9, 8, 3, 5, 6, 0, 5, 0, 1, 4, 0, 3, 6, 9, 7, 4,\n",
+       "       1, 7, 5, 7, 6, 9, 9, 4, 9, 8, 0, 6, 0, 9, 0, 3, 1, 7, 1, 0, 8, 2,\n",
+       "       7, 6, 3, 7, 1, 0, 4, 1, 8, 7, 1, 5, 5, 5, 8, 5, 1, 0, 8, 7, 3, 9,\n",
+       "       9, 8, 0, 4, 5, 8, 2, 8, 9, 7, 4, 7, 9, 1, 7, 1, 7, 8, 4, 0, 8, 8,\n",
+       "       3, 0, 3, 1, 5, 7, 2, 5, 0, 7, 0, 0, 0, 8, 5, 8, 0, 5], dtype=int32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "(172, 10)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,23 +225,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cluster #0 : 15 movies\n",
-      "cluster #1 : 14 movies\n",
-      "cluster #2 : 19 movies\n",
+      "cluster #0 : 25 movies\n",
+      "cluster #1 : 19 movies\n",
+      "cluster #2 : 6 movies\n",
       "cluster #3 : 13 movies\n",
-      "cluster #4 : 7 movies\n",
-      "cluster #5 : 20 movies\n",
-      "cluster #6 : 26 movies\n",
-      "cluster #7 : 27 movies\n",
+      "cluster #4 : 22 movies\n",
+      "cluster #5 : 18 movies\n",
+      "cluster #6 : 10 movies\n",
+      "cluster #7 : 22 movies\n",
       "cluster #8 : 22 movies\n",
-      "cluster #9 : 9 movies\n"
+      "cluster #9 : 15 movies\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -273,173 +273,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "cluster #0 : 15 movies\n",
-      "  > 인터스텔라\n",
-      "  > 겨울왕국\n",
-      "  > 빅 히어로\n",
-      "  > 인턴\n",
-      "  > 인사이드 아웃\n",
-      "  > 비긴 어게인\n",
-      "  > 그래비티\n",
-      "  > 하울의 움직이는 성\n",
-      "  > 미스 페레그린과 이상한 아이들의 집\n",
-      "  > 신비한 동물사전\n",
-      "  > 라라랜드\n",
-      "  > 센과 치히로의 행방불명\n",
-      "  > 시간을 달리는 소녀\n",
-      "  > 웜 바디스\n",
-      "  > 어바웃 타임\n",
-      "\n",
-      "cluster #1 : 14 movies\n",
-      "  > 다크 나이트\n",
-      "  > 영웅: 샐러멘더의 비밀\n",
-      "  > 인셉션\n",
-      "  > 타이타닉\n",
-      "  > 클레멘타인\n",
-      "  > 세 얼간이\n",
-      "  > 레미제라블\n",
-      "  > 어거스트 러쉬\n",
-      "  > 인생은 아름다워\n",
-      "  > 쇼생크 탈출\n",
-      "  > 리얼 스틸\n",
-      "  > 말할 수 없는 비밀\n",
-      "  > 디스트릭트 9\n",
-      "  > 아바타\n",
-      "\n",
-      "cluster #2 : 19 movies\n",
-      "  > 해무\n",
-      "  > 도둑들\n",
-      "  > 럭키\n",
-      "  > 해적: 바다로 간 산적\n",
-      "  > 아가씨\n",
-      "  > 신세계\n",
-      "  > 암살\n",
-      "  > 광해, 왕이 된 남자\n",
-      "  > 검사외전\n",
-      "  > 관상\n",
-      "  > 역린\n",
-      "  > 밀정\n",
-      "  > 신의 한 수\n",
-      "  > 아수라\n",
-      "  > 베테랑\n",
-      "  > 타짜-신의 손\n",
-      "  > 쌍화점\n",
-      "  > 군도:민란의 시대\n",
-      "  > 사도\n",
-      "\n",
-      "cluster #3 : 13 movies\n",
-      "  > 터널\n",
-      "  > 대호\n",
-      "  > 판도라\n",
-      "  > 님아, 그 강을 건너지 마오\n",
-      "  > 카트\n",
-      "  > 국제시장\n",
-      "  > 감기\n",
-      "  > 귀향\n",
-      "  > 부산행\n",
-      "  > 덕혜옹주\n",
-      "  > 타워\n",
-      "  > 소원\n",
-      "  > 히말라야\n",
-      "\n",
-      "cluster #4 : 7 movies\n",
-      "  > 메이즈 러너: 스코치 트라이얼\n",
-      "  > 제이슨 본\n",
-      "  > 킹스맨 : 시크릿 에이전트\n",
-      "  > 미션 임파서블: 로그네이션\n",
-      "  > 매드맥스: 분노의 도로\n",
-      "  > 나우 유 씨 미 2\n",
-      "  > 마션\n",
-      "\n",
-      "cluster #5 : 20 movies\n",
-      "  > 해리 포터와 죽음의 성물 - 2부\n",
-      "  > 좋은 놈, 나쁜 놈, 이상한 놈\n",
-      "  > 캐리비안의 해적 - 세상의 끝에서\n",
-      "  > 트랜스포머 3\n",
-      "  > 배틀쉽\n",
-      "  > 스카이라인\n",
-      "  > 트와일라잇\n",
-      "  > 2012\n",
-      "  > 나는 전설이다\n",
-      "  > 해리 포터와 혼혈 왕자\n",
-      "  > 투사부일체\n",
-      "  > 전우치\n",
-      "  > 디 워\n",
-      "  > 트랜스포머: 패자의 역습\n",
-      "  > 아이언맨\n",
-      "  > 뉴 문\n",
-      "  > 다세포 소녀\n",
-      "  > 캐리비안의 해적 - 망자의 함\n",
-      "  > 트랜스포머\n",
-      "  > 라스트 갓파더\n",
-      "\n",
-      "cluster #6 : 26 movies\n",
-      "  > 고사 두 번째 이야기: 교생실습\n",
-      "  > 박쥐\n",
-      "  > 베를린\n",
-      "  > 7광구\n",
-      "  > 내가 살인범이다\n",
-      "  > 곡성(哭聲)\n",
-      "  > 의형제\n",
-      "  > 검은 사제들\n",
-      "  > 악마를 보았다\n",
-      "  > 용의자\n",
-      "  > 최종병기 활\n",
-      "  > 감시자들\n",
-      "  > 더 테러 라이브\n",
-      "  > 연가시\n",
-      "  > 초능력자\n",
-      "  > 끝까지 간다\n",
-      "  > 퀵\n",
-      "  > 괴물\n",
-      "  > 숨바꼭질\n",
-      "  > 아저씨\n",
-      "  > 테이큰\n",
-      "  > 추격자\n",
-      "  > 조선명탐정: 각시투구꽃의 비밀\n",
-      "  > 설국열차\n",
-      "  > 월드워Z\n",
-      "  > 세븐 데이즈\n",
-      "\n",
-      "cluster #7 : 27 movies\n",
-      "  > 해운대\n",
-      "  > 국가대표\n",
-      "  > 미스터 고\n",
-      "  > 과속스캔들\n",
-      "  > 미녀는 괴로워\n",
-      "  > 응답하라 1988\n",
-      "  > 완득이\n",
-      "  > 지금, 만나러 갑니다\n",
-      "  > 해바라기\n",
-      "  > 박수건달\n",
-      "  > 형\n",
-      "  > 두근두근 내 인생\n",
-      "  > 왕의 남자\n",
-      "  > 7번방의 선물\n",
-      "  > 웰컴 투 동막골\n",
-      "  > 반창꼬\n",
-      "  > 시라노; 연애조작단\n",
-      "  > 늑대소년\n",
-      "  > 써니\n",
-      "  > 수상한 그녀\n",
-      "  > 건축학개론\n",
-      "  > 우리들의 행복한 시간\n",
-      "  > 하모니\n",
-      "  > 헬로우 고스트\n",
-      "  > 파파로티\n",
-      "  > 라디오 스타\n",
-      "  > 뷰티 인사이드\n",
-      "\n",
-      "cluster #8 : 22 movies\n",
-      "  > 다크 나이트 라이즈\n",
+      "cluster #0 : 25 movies\n",
       "  > 배트맨 대 슈퍼맨: 저스티스의 시작\n",
+      "  > 메이즈 러너: 스코치 트라이얼\n",
       "  > 캡틴 아메리카: 시빌 워\n",
       "  > 인디펜던스 데이: 리써전스\n",
+      "  > 제이슨 본\n",
       "  > 쥬라기 월드\n",
       "  > 엑스맨: 데이즈 오브 퓨처 패스트\n",
       "  > 워크래프트: 전쟁의 서막\n",
       "  > 엣지 오브 투모로우\n",
-      "  > 맨 오브 스틸\n",
+      "  > 킹스맨 : 시크릿 에이전트\n",
+      "  > 미션 임파서블: 로그네이션\n",
       "  > 혹성탈출: 반격의 서막\n",
       "  > 아이언맨 3\n",
       "  > 어벤져스: 에이지 오브 울트론\n",
@@ -447,14 +292,104 @@
       "  > 터미네이터 제니시스\n",
       "  > 수어사이드 스쿼드\n",
       "  > 닥터 스트레인지\n",
-      "  > 어벤져스\n",
       "  > 엑스맨: 아포칼립스\n",
       "  > 트랜스포머: 사라진 시대\n",
       "  > 캡틴 아메리카: 윈터 솔져\n",
+      "  > 매드맥스: 분노의 도로\n",
+      "  > 나우 유 씨 미 2\n",
       "  > 어메이징 스파이더맨 2\n",
-      "  > 퍼시픽 림\n",
+      "  > 마션\n",
       "\n",
-      "cluster #9 : 9 movies\n",
+      "cluster #1 : 19 movies\n",
+      "  > 국가대표\n",
+      "  > 과속스캔들\n",
+      "  > 미녀는 괴로워\n",
+      "  > 타이타닉\n",
+      "  > 지금, 만나러 갑니다\n",
+      "  > 해바라기\n",
+      "  > 클레멘타인\n",
+      "  > 세 얼간이\n",
+      "  > 왕의 남자\n",
+      "  > 어거스트 러쉬\n",
+      "  > 인생은 아름다워\n",
+      "  > 웰컴 투 동막골\n",
+      "  > 쇼생크 탈출\n",
+      "  > 시라노; 연애조작단\n",
+      "  > 써니\n",
+      "  > 건축학개론\n",
+      "  > 헬로우 고스트\n",
+      "  > 말할 수 없는 비밀\n",
+      "  > 라디오 스타\n",
+      "\n",
+      "cluster #2 : 6 movies\n",
+      "  > 해리 포터와 죽음의 성물 - 2부\n",
+      "  > 캐리비안의 해적 - 세상의 끝에서\n",
+      "  > 트와일라잇\n",
+      "  > 해리 포터와 혼혈 왕자\n",
+      "  > 뉴 문\n",
+      "  > 캐리비안의 해적 - 망자의 함\n",
+      "\n",
+      "cluster #3 : 13 movies\n",
+      "  > 해운대\n",
+      "  > 미스터 고\n",
+      "  > 터널\n",
+      "  > 대호\n",
+      "  > 판도라\n",
+      "  > 감기\n",
+      "  > 더 테러 라이브\n",
+      "  > 연가시\n",
+      "  > 숨바꼭질\n",
+      "  > 부산행\n",
+      "  > 타워\n",
+      "  > 설국열차\n",
+      "  > 월드워Z\n",
+      "\n",
+      "cluster #4 : 22 movies\n",
+      "  > 해무\n",
+      "  > 도둑들\n",
+      "  > 베를린\n",
+      "  > 럭키\n",
+      "  > 해적: 바다로 간 산적\n",
+      "  > 아가씨\n",
+      "  > 신세계\n",
+      "  > 곡성(哭聲)\n",
+      "  > 암살\n",
+      "  > 검은 사제들\n",
+      "  > 용의자\n",
+      "  > 검사외전\n",
+      "  > 관상\n",
+      "  > 감시자들\n",
+      "  > 역린\n",
+      "  > 밀정\n",
+      "  > 끝까지 간다\n",
+      "  > 신의 한 수\n",
+      "  > 아수라\n",
+      "  > 베테랑\n",
+      "  > 타짜-신의 손\n",
+      "  > 군도:민란의 시대\n",
+      "\n",
+      "cluster #5 : 18 movies\n",
+      "  > 다크 나이트 라이즈\n",
+      "  > 다크 나이트\n",
+      "  > 인셉션\n",
+      "  > 트랜스포머 3\n",
+      "  > 배틀쉽\n",
+      "  > 스카이라인\n",
+      "  > 2012\n",
+      "  > 맨 오브 스틸\n",
+      "  > 그래비티\n",
+      "  > 디 워\n",
+      "  > 리얼 스틸\n",
+      "  > 트랜스포머: 패자의 역습\n",
+      "  > 아이언맨\n",
+      "  > 어벤져스\n",
+      "  > 디스트릭트 9\n",
+      "  > 트랜스포머\n",
+      "  > 퍼시픽 림\n",
+      "  > 아바타\n",
+      "\n",
+      "cluster #6 : 10 movies\n",
+      "  > 영웅: 샐러멘더의 비밀\n",
       "  > 26년\n",
       "  > 포화 속으로\n",
       "  > 천안함 프로젝트\n",
@@ -463,7 +398,72 @@
       "  > 연평해전\n",
       "  > 인천상륙작전\n",
       "  > 화려한 휴가\n",
-      "  > 쎄시봉\n"
+      "  > 귀향\n",
+      "\n",
+      "cluster #7 : 22 movies\n",
+      "  > 고사 두 번째 이야기: 교생실습\n",
+      "  > 박쥐\n",
+      "  > 7광구\n",
+      "  > 내가 살인범이다\n",
+      "  > 의형제\n",
+      "  > 악마를 보았다\n",
+      "  > 좋은 놈, 나쁜 놈, 이상한 놈\n",
+      "  > 최종병기 활\n",
+      "  > 초능력자\n",
+      "  > 퀵\n",
+      "  > 괴물\n",
+      "  > 나는 전설이다\n",
+      "  > 아저씨\n",
+      "  > 투사부일체\n",
+      "  > 전우치\n",
+      "  > 테이큰\n",
+      "  > 다세포 소녀\n",
+      "  > 추격자\n",
+      "  > 조선명탐정: 각시투구꽃의 비밀\n",
+      "  > 쌍화점\n",
+      "  > 세븐 데이즈\n",
+      "  > 라스트 갓파더\n",
+      "\n",
+      "cluster #8 : 22 movies\n",
+      "  > 응답하라 1988\n",
+      "  > 완득이\n",
+      "  > 광해, 왕이 된 남자\n",
+      "  > 님아, 그 강을 건너지 마오\n",
+      "  > 카트\n",
+      "  > 국제시장\n",
+      "  > 박수건달\n",
+      "  > 형\n",
+      "  > 두근두근 내 인생\n",
+      "  > 7번방의 선물\n",
+      "  > 반창꼬\n",
+      "  > 늑대소년\n",
+      "  > 수상한 그녀\n",
+      "  > 덕혜옹주\n",
+      "  > 우리들의 행복한 시간\n",
+      "  > 하모니\n",
+      "  > 쎄시봉\n",
+      "  > 소원\n",
+      "  > 파파로티\n",
+      "  > 히말라야\n",
+      "  > 뷰티 인사이드\n",
+      "  > 사도\n",
+      "\n",
+      "cluster #9 : 15 movies\n",
+      "  > 인터스텔라\n",
+      "  > 겨울왕국\n",
+      "  > 빅 히어로\n",
+      "  > 인턴\n",
+      "  > 인사이드 아웃\n",
+      "  > 비긴 어게인\n",
+      "  > 레미제라블\n",
+      "  > 하울의 움직이는 성\n",
+      "  > 미스 페레그린과 이상한 아이들의 집\n",
+      "  > 신비한 동물사전\n",
+      "  > 라라랜드\n",
+      "  > 센과 치히로의 행방불명\n",
+      "  > 시간을 달리는 소녀\n",
+      "  > 웜 바디스\n",
+      "  > 어바웃 타임\n"
      ]
     }
    ],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "(10, 100)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
