--- a/day03_classifiers/day3_2_xgboost_classifier.ipynb
+++ b/day03_classifiers/day3_2_xgboost_classifier.ipynb
@@ -27,11 +27,10 @@
     }
    ],
    "source": [
-    "import config\n",
     "import numpy as np\n",
     "import warnings\n",
     "import xgboost as xgb\n",
-    "from navermovie_comments import load_sentiment_dataset\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_sentiment_dataset\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "print(xgb.__version__)\n",
@@ -207,8 +206,8 @@
     "    accuracy = n_correct / y.shape[0]\n",
     "    return accuracy\n",
     "\n",
-    "print('train accuracy : {}'.format(accuracy(bst, dtrain, y_train)))\n",
-    "print('test  accuracy : {}'.format(accuracy(bst, dtest, y_test)))"
+    "print('train accuracy : {}'.format(accuracy(loaded_bst, dtrain, y_train)))\n",
+    "print('test  accuracy : {}'.format(accuracy(loaded_bst, dtest, y_test)))"
    ]
   },
   {
@@ -235,6 +234,7 @@
    "source": [
     "num_round = 1000\n",
     "bst = xgb.train(param, dtrain, num_round)\n",
+    "bst.save_model('xgb1000.model')\n",
     "\n",
     "print('train accuracy : {}'.format(accuracy(bst, dtrain, y_train)))\n",
     "print('test  accuracy : {}'.format(accuracy(bst, dtest, y_test)))"
@@ -288,12 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "classifier = xgb.XGBClassifier()\n",
-    "classifier.load_model('0001.model')"
+    "classifier.load_model('xgb1000.model')"
    ]
   },
   {
@@ -305,15 +305,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average prection probability with train data = 0.7423478960990906\n",
-      "average prection probability with test data = 0.7415752410888672\n"
+      "average prection probability with train data = 0.8601894974708557\n",
+      "average prection probability with test data = 0.8590908646583557\n"
      ]
     }
    ],
