--- a/day03_classifiers/day3_3_classification_performance_comparison.ipynb
+++ b/day03_classifiers/day3_3_classification_performance_comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,10 +22,9 @@
     }
    ],
    "source": [
-    "import config\n",
     "import sklearn\n",
     "import warnings\n",
-    "from navermovie_comments import load_sentiment_dataset\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_sentiment_dataset\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "print(sklearn.__version__)\n",
