--- a/day03_classifiers/day3_a_lightgbm_classifier.ipynb
+++ b/day03_classifiers/day3_a_lightgbm_classifier.ipynb
@@ -22,17 +22,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2.3\n",
+      "2.3.1\n",
       "(239708, 10178)\n",
       "[-1  1]\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
     "import numpy as np\n",
     "import lightgbm as lgb\n",
-    "from navermovie_comments import load_sentiment_dataset\n",
+    "from lovit_textmining_dataset.navermovie_comments import load_sentiment_dataset\n",
     "\n",
     "print(lgb.__version__)\n",
     "\n",
@@ -217,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "<lightgbm.basic.Booster at 0x7f84877f76d8>"
+       "<lightgbm.basic.Booster at 0x7fc6c8300470>"
       ]
      },
      "execution_count": 9,
@@ -277,8 +276,8 @@
     "    accuracy = n_correct / y.shape[0]\n",
     "    return accuracy\n",
     "\n",
-    "print('train accuracy : {}'.format(accuracy(bst, x_train, y_train)))\n",
-    "print('test  accuracy : {}'.format(accuracy(bst, x_test, y_test)))"
+    "print('train accuracy : {}'.format(accuracy(loaded_bst, x_train, y_train)))\n",
+    "print('test  accuracy : {}'.format(accuracy(loaded_bst, x_test, y_test)))"
    ]
   },
   {
@@ -305,7 +304,7 @@
    "source": [
     "num_round = 1000\n",
     "bst = lgb.train(param, dtrain, num_round)\n",
-    "bst.save_model('lgb.model')\n",
+    "bst.save_model('lgb1000.model')\n",
     "\n",
     "print('train accuracy : {}'.format(accuracy(bst, x_train, y_train)))\n",
     "print('test  accuracy : {}'.format(accuracy(bst, x_test, y_test)))"
@@ -315,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "그런데 LightGBM 은 XGBoost 처럼 미리 만든 모델이 잘 불러지지 않아 새로 classifier 를 학습합니다."
+    "그런데 Booster 는predict_proba 함수가 없어서 새로 classifier 를 학습합니다."
    ]
   },
   {
@@ -363,15 +362,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average prection probability with train data = 0.8724915968403634\n",
-      "average prection probability with test data = 0.8714802039472103\n"
+      "average prection probability with train data = 0.8724915968403639\n",
+      "average prection probability with test data = 0.8714802039472108\n"
      ]
     }
    ],
@@ -386,6 +385,13 @@
     "print('average prection probability with test data = {}'.format(\n",
     "    check_average_prediction_probability(classifier, x_test)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
